refines issue7 cover spacing

--- a/styles/Issue7.module.css
+++ b/styles/Issue7.module.css
@@ -117,6 +117,7 @@
 }
 
 .pageTitleTwo {
+  margin-top:45vh;
   animation: fadeOut ease-out 3.9s infinite alternate 3.9s;
 }
 
@@ -160,7 +161,7 @@
   row-gap: 3vw;
   justify-content: space-between;
   align-items: flex-end;
-  height:22vh;
+  height:26vh;
 }
 
 .siteShortcuts > .linkButton {
